fix DT-1573, get rid of empty space below the slideshow on mobile

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -682,6 +682,7 @@
 @media only screen and (max-width:480px) {
     .slide-navigation {
         margin: 20px 0;
+        min-height: 0;
     }
 }
 
